# el-xizmati

./: .gitignore  common.yml  db.sqlite3  docker-compose.yml  pyproject.toml  sample.env
.github/workflows/: deploy.yml
django/: gunicorn.conf.py
django/api/: urls.py  views.py
django/api/mobile/: filters.py  serializers.py  serializers_params.py  serializers_response.py  urls.py  views.py
django/apps/ads/: admin.py  models.py
django/apps/ads/migrations/: 0001_initial.py  0002_category_icon.py  0003_ad_latitude_ad_longitude.py  0004_ad_address.py  0005_remove_category_name_category_name_en_and_more.py  0006_ad_is_active.py  0007_offer.py  0008_alter_offer_ad_alter_offer_user.py  0009_offer_owner_was_confirmed_offer_worker_was_completed.py
django/apps/chat/: admin.py  models.py
django/apps/chat/migrations/: 0001_initial.py  0002_chat_count_unread_messages_chat_last_message.py  0003_alter_chat_options_alter_message_options_and_more.py  0004_message_ad.py  0005_alter_message_text_alter_techsupportmessage_text.py
django/apps/main/: admin.py  models.py
django/apps/main/migrations/: 0001_initial.py  (+1 more)
django/apps/users/: admin.py  managers.py  models.py  validator.py
django/conf/: celery.py  renderer.py  settings.py  urls.py
django/services/: address_service.py  ads_service.py  category_service.py  chat_service.py  eskiz_service.py  fb_push_service.py  notification_service.py  offer_service.py  test_service.py  user_service.py
etc/compose/django/: Dockerfile
etc/compose/nginx/: default.conf
locale_files/: districts.json  regions.json
(+7 files in other folders)
