[tool.poetry]
name = "el-xizmati"
version = "0.1.0"
description = ""
authors = ["zukhriddin <zux.828@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
dj-database-url = "^2.2.0"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
